# pycc

./: README.rst  pyproject.toml
scripts/: lexer_example.py  lexing_speed.py  sample.c  sample.py
src/pycc/: _compat.py  _enum.py  _example_lexer.py  _helpers.py  _typing_compat.py  errors.py  example_lexer.py  lexer.py  lexer_example.py  main.py  preprocessor.py  token.py  tokenizer.py
src/pycc/pyasdl/: __init__.py  ast.py  errors.py  tokenize.py
src/pycp/: _enum.py  _typing_compat.py  errors.py  preprocessor.py  token.py  tokenizer.py
tests/: test_enum.py  test_lexer.py  test_lexing_speed.py
